--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ wp-content/uploads/
 wp-content/mu-plugins/
 wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
+wp-content/themes/dermer/.sass-cache
 
 
 local-adminer-*.php
